--- a/packages/ui/global.css
+++ b/packages/ui/global.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Pixelify Sans";
+  src: url("/PixelifySans-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
