--- a/chrome-extension/public/content.css
+++ b/chrome-extension/public/content.css
@@ -10,3 +10,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#maincontent {
+  background-color: unset !important;
+}
+
+#ctl00_ctl00_MainContent_StudentSelectorPlaceholder {
+  min-height: unset !important;
+}
+
+#ctl00_ctl00_MainContent_PXPHeader {
+  padding: 4rem;
+  background-color: white !important;
+}
