--- a/packages/ui/global.css
+++ b/packages/ui/global.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: "Pixelify Sans";
-  src: url("/PixelifySans-VariableFont_wght.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -37,11 +29,8 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     --radius: 0.65rem;
+    scrollbar-color: hsl(var(--input)) hsl(var(--popover));
   }
-}
-
-:root {
-  scrollbar-color: hsl(0 0% 25.1%) hsl(0 0% 9%);
 }
 
 body {
@@ -51,14 +40,8 @@ body {
   padding: 0;
   box-sizing: border-box;
 
-  font-family:
-    "Pixelify Sans", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif !important;
+  font-family: 'Ubuntu' !important;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
