--- a/packages/ui/global.css
+++ b/packages/ui/global.css
@@ -20,7 +20,7 @@
     --accent-foreground: 210 20% 98%;
     --destructive: 43.3 96.4% 56.3%;
     --destructive-foreground: 43.3 96.4% 56.3%;
-    --border: 43.3 96.4% 56.3%;
+    --border: 0 0% 25.1%;
     --input: 0 0% 25.1%;
     --ring: 263.4 69.3% 42.2%;
     --chart-1: 220 70% 50%;
@@ -48,7 +48,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 
-  font-family: 'Ubuntu', 'Arial' !important;
+  font-family: 'Ubuntu';
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
